fix: 修复功能执行异常问题